services/keycloak/k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
  - port: 5432
    targetPort: postgres
    protocol: TCP
  type: ClusterIP
