services/keycloak/k8s/base/postgres.yaml
# This is deployment of PostgreSQL with an ephemeral storage for testing: Once the Pod stops, the data is lost.
# For a production setup, replace it with a database setup that persists your data.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    service: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      service: keycloak
  template:
    metadata:
      labels:
        app: postgres
        service: keycloak
    spec:
      containers:
        - name: postgres
          image: mirror.gcr.io/postgres:17
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
            - name: postgres-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgres-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    service: keycloak
  name: postgres
spec:
  selector:
    app: postgres
    service: keycloak
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
