services/keycloak/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-blog
  name: keycloak
  labels:
    app: keycloak
    service: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: keycloak
    service: keycloak
  type: ClusterIP
