services/keycloak/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: microservices-blog
  name: keycloak-ingress
  labels:
    app: keycloak-ingress
    service: keycloak
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - keycloak.192.168.49.2.nip.io
  rules:
  - host: keycloak.192.168.49.2.nip.io
    http:
      paths:
      # - path: /keycloak(/|$)(.*)
      #   pathType: ImplementationSpecific
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
